# music-shuffler

./: .cursorrules  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  mock.html
.github/workflows/: build.yml
installer/: windows-installer.iss
scripts/: build-windows.sh
src/: audio.rs  main.rs  metadata.rs  music.rs
