[package]
name = "music-shuffler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A music shuffler application that creates random playlists from your music library"

[[bin]]
name = "music-shuffler"
path = "src/main.rs"

[dependencies]
eframe = "0.31.1"  # egui framework for the UI
rodio = "0.20.1"   # Audio playback
walkdir = "2.4.0"  # Directory traversal
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON serialization
directories = "6.0.0"  # User directories handling
anyhow = "1.0"     # Error handling
rand = "0.9.1"     # Random number generation
rfd = "0.15.3"     # File dialog
id3 = "1.12.0"     # MP3 metadata
metaflac = "0.2.8" # FLAC metadata
image = "0.25.6"   # Image handling
symphonia = { version = "0.5.4", features = ["mp3", "flac", "vorbis", "aac", "isomp4"] }
 